--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background-color: #f4f4ff;
+    background-color: #f5f5f5;
     overflow-y: auto!important;
     overflow-x: hidden;
 }
@@ -208,6 +208,11 @@ nav {
     padding: 0 16px;
     height: 60px!important;
     line-height: 60px!important;
+    background-color: #00796b;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin: 10px;
+    padding: 0 10px;
 }
 
 .mn-header.navbar-fixed nav .nav-wrapper {
@@ -1585,7 +1590,7 @@ li.active .nav-drop-icon {
 
 .sidebar-profile {
     padding: 25px 24px;
-    background: url('../images/profile_bg.png');
+    background: url('../images/profile-image.jpg');
     background-size: cover;
 }
 
